--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-To get the app run and running :
+[DEMO](http://104.207.130.123/)
+
+To get the app run and running locally:
 
 run proxy:
 - cd proxy
